--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "promise-faker",
-  "version": "1.0.0",
-  "description": "promise-faker",
+  "version": "1.0.1",
+  "description": "Provides promise-like APIs but does the synchronous things. This module is useful for controlling flows.",
   "main": "lib/index.js",
   "module": "src/index.js",
   "scripts": {
-    "build": "BABEL_ENV=rollup rollup -c",
-    "test": "BABEL_ENV=ava nyc ava --verbose --timeout=10s",
-    "test-no-cov": "BABEL_ENV=ava ava --verbose --timeout=10s",
+    "build": "babel src --out-dir lib",
+    "test": "nyc ava --verbose --timeout=10s",
+    "test-no-cov": "ava --verbose --timeout=10s",
     "prepublish": "npm run build",
     "report-cov": "nyc report --reporter=text-lcov > coverage.lcov && codecov"
   },
@@ -20,7 +20,12 @@
     "url": "git://github.com/kaelzhang/promise-faker.git"
   },
   "keywords": [
-    "promise-faker"
+    "promise-faker",
+    "fake-promise",
+    "promise",
+    "fake",
+    "sync",
+    "async"
   ],
   "engines": {
     "node": ">=4"
@@ -53,11 +58,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-register": "^6.24.1",
     "nyc": "^11.1.0",
-    "codecov": "^2.3.0",
-    "rollup": "^0.49.3",
-    "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-commonjs": "^8.2.6",
-    "rollup-plugin-node-resolve": "^3.0.0"
+    "codecov": "^2.3.0"
   },
   "dependencies": {
     "graceful-instanceof": "^1.0.0",
