--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "promise-faker",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "Provides promise-like APIs but does the synchronous things. This module is useful for controlling flows.",
   "main": "lib/index.js",
   "module": "src/index.js",
@@ -23,6 +23,9 @@
     "promise-faker",
     "fake-promise",
     "promise",
+    "promise.resolve",
+    "promise.reject",
+    "promise.all",
     "fake",
     "sync",
     "async"
