--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "promise-faker",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "description": "Provides promise-like APIs but runs synchronously. This module is useful for controlling flows.",
   "main": "lib/index.js",
   "module": "src/index.js",
@@ -52,23 +52,24 @@
     ]
   },
   "devDependencies": {
-    "ava": "^0.16.0",
+    "ava": "^0.24.0",
     "babel-cli": "^6.16.0",
-    "babel-plugin-transform-async-to-generator": "^6.22.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-syntax-trailing-function-commas": "^6.13.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-plugin-transform-async-to-generator": "^6.22.0",
     "babel-plugin-transform-class-properties": "^6.16.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-plugin-transform-exponentiation-operator": "^6.8.0",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-inline-environment-variables": "^6.8.0",
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
-    "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-register": "^6.24.1",
-    "nyc": "^11.1.0",
-    "codecov": "^2.3.0"
+    "codecov": "^3.0.0",
+    "nyc": "^11.1.0"
   },
   "dependencies": {
-    "graceful-instanceof": "^1.0.0",
-    "symbol-for": "^1.0.0"
+    "graceful-instanceof": "^1.0.1",
+    "symbol-for": "^1.0.1"
   }
 }
