--- a/.babelrc
+++ b/.babelrc
@@ -13,10 +13,6 @@
     "transform-exponentiation-operator",
     "transform-async-to-generator",
     "syntax-trailing-function-commas",
-    "transform-inline-environment-variables", [
-      "transform-runtime", {
-        "regenerator": true
-      }
-    ]
+    "transform-inline-environment-variables"
   ]
 }
